# Sinusoid_Controller_With_Services

./: CMakeLists.txt  README.md  comments.txt  package.xml
launch/: sinusoid_controller_with_services.launch
src/: commander_client.cpp  services_commander.cpp
srv/: sinecontrol.srv
